<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.qxotic</groupId>
    <artifactId>qxotic-parent</artifactId>
    <version>0.1.0</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <artifactId>jinfer-parent</artifactId>
  <packaging>pom</packaging>

  <name>jinfer (parent)</name>
  <description>Java LLM inference engine (multi-module)</description>

  <modules>
    <module>jinfer-core</module>
    <module>jinfer-llm</module>
    <module>jinfer-chat</module>
    <module>jinfer-jinja</module>
    <module>jinfer-kernels</module>
    <module>jinfer-gemma4</module>
    <module>jinfer-llama</module>
    <module>jinfer-qwen35</module>
    <module>jinfer-gptoss</module>
    <module>jinfer-nemotronh</module>
    <module>jinfer-lfm2</module>
    <module>jinfer-server</module>
    <module>jinfer-bench</module>
  </modules>

  <properties>
    <maven.compiler.release>25</maven.compiler.release>

    <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
    <native-maven-plugin.version>0.10.6</native-maven-plugin.version>

    <!-- Per-executable knobs for the shared shade + native-image config below. A module that ships a
         binary overrides jinfer.image.name/mainClass (and addModules, when it needs more than the
         Vector API); everything else inherits the defaults. -->
    <jinfer.image.name>jinfer</jinfer.image.name>
    <jinfer.image.mainClass>com.qxotic.jinfer.Main</jinfer.image.mainClass>
    <jinfer.image.addModules>jdk.incubator.vector</jinfer.image.addModules>

    <!-- native builder opt-in: wide 512-bit register tiles (needs a 32-ZMM Graal, GR-13757) -->
    <jam.wideTiles>false</jam.wideTiles>
    <jinfer.PreloadGGUF />
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-llm</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-chat</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-jinja</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-kernels</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-gemma4</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-llama</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-qwen35</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-gptoss</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-nemotronh</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.qxotic</groupId>
        <artifactId>jinfer-lfm2</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <enablePreview>true</enablePreview>
            <compilerArgs>
              <arg>--add-modules</arg>
              <arg>jdk.incubator.vector,jdk.httpserver</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <configuration>
            <!-- jinfer has no JUnit suite: every src/test class is a main() harness driven by hand
                 or by the bench scripts. Nothing for surefire to run. -->
            <skipTests>true</skipTests>
          </configuration>
        </plugin>

        <!-- Shared by jinfer-server and jinfer-bench: an executable fat jar, and (under -Pnative) the
             native image built from it. Both differ only in the jinfer.image.* properties. -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>${maven-shade-plugin.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>shade</goal>
              </goals>
              <phase>package</phase>
              <configuration>
                <createDependencyReducedPom>false</createDependencyReducedPom>
                <transformers>
                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                    <mainClass>${jinfer.image.mainClass}</mainClass>
                  </transformer>
                </transformers>
                <filters>
                  <filter>
                    <artifact>*:*</artifact>
                    <excludes>
                      <exclude>META-INF/*.SF</exclude>
                      <exclude>META-INF/*.DSA</exclude>
                      <exclude>META-INF/*.RSA</exclude>
                    </excludes>
                  </filter>
                </filters>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.graalvm.buildtools</groupId>
          <artifactId>native-maven-plugin</artifactId>
          <version>${native-maven-plugin.version}</version>
          <extensions>true</extensions>
          <configuration>
            <imageName>${jinfer.image.name}</imageName>
            <mainClass>${jinfer.image.mainClass}</mainClass>
            <buildArgs>
              <buildArg>-O3</buildArg>
              <buildArg>-Djam.vector.wideTiles=${jam.wideTiles}</buildArg>
              <buildArg>-march=native</buildArg>
              <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
              <buildArg>-H:+VectorAPISupport</buildArg>
              <buildArg>-H:+ForeignAPISupport</buildArg>
              <buildArg>--enable-preview</buildArg>
              <buildArg>--add-modules</buildArg>
              <buildArg>${jinfer.image.addModules}</buildArg>
              <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
              <buildArg>-J--enable-native-access=ALL-UNNAMED</buildArg>
              <buildArg>--initialize-at-build-time=com.qxotic.</buildArg>
              <buildArg>--initialize-at-run-time=com.qxotic.jinfer.RuntimeFlags,com.qxotic.jinfer.server.ServerFlags,com.qxotic.jinfer.Parallel,com.qxotic.jinfer.MatMul,com.qxotic.jinfer.Dispatch,com.qxotic.jinfer.JamMatMul,com.qxotic.jam.NativeJAM,com.qxotic.jam.NativeLoader</buildArg>
              <buildArg>-H:IncludeResources=com/qxotic/jam/native/.*</buildArg>
              <buildArg>-Djdk.incubator.vector.VECTOR_ACCESS_OOB_CHECK=0</buildArg>
              <buildArg>-Djinfer.PreloadGGUF=${jinfer.PreloadGGUF}</buildArg>
            </buildArgs>
          </configuration>
          <executions>
            <execution>
              <id>build-native</id>
              <goals>
                <goal>compile-no-fork</goal>
              </goals>
              <phase>package</phase>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
